<resources>
    <string name="app_name">BookIT</string>

    <string name="now_playing">Now Playing</string>
    <string name="hot_movie">Coming Soon</string>
    <string name="search_movie">Search Movie</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_summary_detail">Movie Summary</string>
    <string name="book_movie">Book</string>
    <string name="nav_home_page">Home Page</string>
    <string name="nav_order_history">Order History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_movie">Title Movie</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="date_movie">Release Date</string>
    <string name="random_id">#0001BIT</string>
    <string name="price_order">Rp. 50.000</string>
    <string name="cinema_location">Cinema XXI</string>

    <string name="film_s_title">Film\'s Title</string>
    <string name="date">date</string>
    <string name="duration">duration</string>
    <string name="location">Location</string>
    <string name="ticket">Ticket</string>
    <string name="buy">buy</string>

    <string name="image_movie_1">https://www.joblo.com/assets/images/joblo/posters/2018/12/captain_marvel.jpg</string>
    <string name="image_movie_2">https://www.joblo.com/assets/images/joblo/posters/2018/12/once-upon-a-deadpool-poster-heaven.jpg</string>
    <string name="image_movie_3">https://www.joblo.com/assets/images/joblo/posters/2018/11/bumblebee-final-poster.jpg</string>
    <string name="image_movie_4">https://www.joblo.com/assets/images/joblo/posters/2018/11/aquaman-charaposter1-xl.jpg</string>
    <string name="image_movie_5">https://www.joblo.com/assets/images/joblo/posters/2018/11/replicasfinaltrailerposter.jpg</string>
    <string name="channel_name">BookIT-Notification-Channel</string>
    <string name="channel_description">Notification for buying a movie ticket</string>
    <string name="order_ticket_success">Order Ticket Success</string>
    <string name="complete_paymet">Pleas complete the payment</string>
    <string name="movie_duration">125 Minutes</string>

    <string name="pref_color_white_value" translatable="false">White</string>
    <string name="pref_color_eggshell_value" translatable="false">Egshell</string>
    <string name="pref_color_red_value" translatable="false">Red</string>
    <string name="pref_color_label_white">White</string>
    <string name="pref_color_label_eggshell">Eggshell</string>
    <string name="pref_color_label_red">Red</string>

    <string name="pref_color_key" translatable="false">color</string>
    <string name="pref_color_label">Toolbar Color</string>
    <string name="action_settings">Settings</string>
    <string name="username">Joni</string>

    <string name="movie_desc_dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="movie_coming_soon">The movie is not available yet</string>

</resources>
