<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    android:layout_weight="1">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp">

        <ImageView
            android:id="@+id/iv_order_history"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_ticket_confirmation" />

        <TextView
            android:id="@+id/tv_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_id"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            app:layout_constraintLeft_toRightOf="@id/iv_order_history"/>

        <TextView
            android:id="@+id/tv_cinema_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cinema_location"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            app:layout_constraintLeft_toRightOf="@id/iv_order_history"
            app:layout_constraintTop_toBottomOf="@id/tv_order_id"/>

        <TextView
            android:id="@+id/tv_movie_title_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            app:layout_constraintLeft_toRightOf="@id/iv_order_history"
            app:layout_constraintTop_toBottomOf="@id/tv_cinema_location"/>

        <TextView
            android:id="@+id/tv_price_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_order"
            app:layout_constraintRight_toRightOf="parent"/>

           </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>