<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    android:layout_weight="1"
    android:paddingBottom="2dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:id="@+id/iv_item_img_movie"/>

        <TextView
            android:id="@+id/tv_item_title_movie"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_movie"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tv_item_vote_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_movie"
            android:layout_gravity="center_horizontal"
            android:textColor="#000"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_item_date_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_movie"
            android:layout_gravity="center_horizontal"
            android:textColor="#000"
            android:textSize="12sp"/>
    </LinearLayout>
</android.support.v7.widget.CardView>
